tests/neg/given-ambiguous-default-1.check
-- [E172] Type Error: tests/neg/given-ambiguous-default-1.scala:18:23 --------------------------------------------------
18 |def f: Unit = summon[B] // error: Ambiguous given instances
   |                       ^
   |Ambiguous given instances: both given instance a1 and given instance a2 match type A of parameter a of given instance given_B
